--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node .index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
